Fixed headings, horizontal scrollbar

--- a/app/globals.css
+++ b/app/globals.css
@@ -150,7 +150,7 @@ pre {
 
 .text-hero {
   font-size: 160px;
-  line-height: 100px;
+  line-height: 90px;
   font-weight: 400;
   min-width: max-content;
 }
@@ -173,7 +173,7 @@ pre {
 .text-section-title {
   font-weight: 400;
   font-size: 6vw;
-  line-height: 90px;
+  line-height: 85px;
 }
 
 .text-feature-title {
@@ -204,11 +204,13 @@ pre {
   line-height: 115px;
 }
 
-@media (max-width: 500px) {
+@media (max-width: 768px) {
   .text-sub-hero-xl {  
     font-size: 2.5vw;
     line-height: 38px;  
   }
+
+
 }
   
 @media (max-width: 1024px) {
@@ -236,7 +238,7 @@ pre {
   }
 
   .text-section-title {
-    font-size: 3.75rem;
+    font-size: 2.75rem;
     line-height: 1;
   }
 
